# TehkanWorldCup

./: .gitignore  CMakeLists.txt  main.cpp
include/: Ball.hpp  Coach.hpp  FieldGame.hpp  Formation.hpp  Game.hpp  Player.hpp  Position.hpp  Style.hpp  Team.hpp
include/interfaces/: Presenter.hpp
include/themes/: Defaults.hpp
include/utility/: Actions.hpp  iomap.hpp
src/: Ball.cpp  FieldGame.cpp  Game.cpp  Player.cpp  Style.tpp  Team.cpp
src/themes/: Defaults.cpp
src/utility/: Actions.cpp  iomap.cpp  iomap.tpp
